# YoutuberSimulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: GameLogics.h  Menus.h  Variables.h
src/: GameLogics.cpp  Main.cpp  Menus.cpp  Variables.cpp
